--- a/src/docs_site/powershell_docs/docs/tatux.intune.packaging/docs/New-IntuneApplication.mdx
+++ b/src/docs_site/powershell_docs/docs/tatux.intune.packaging/docs/New-IntuneApplication.mdx
@@ -1,18 +1,21 @@
 ---
-external help file: tatux.intune.packaging-help.xml
-Module Name: tatux.intune.packaging
-online version:
-schema: 2.0.0
+id: New-IntuneApplication
+title: New-IntuneApplication
+keywords:
+  - PowerShell
+  - Commands
+  - tatux.intune.packaging
+hide_title: false
+hide_table_of_contents: false
 ---
 
-# New-IntuneApplication
-
 ## SYNOPSIS
-Creates a new Intune Application Deployment, automatically generating the .intunewin file and optionally the JSON file, and optionally publishing it
+
+\{\{ Fill in the Synopsis \}\}
 
 ## SYNTAX
 
-```
+```powershell
 New-IntuneApplication [-ApplicationName] <String> [-SourceFiles] <String[]> [-MainInstallerFileName] <String>
  [[-OutputFolder] <String>] [[-Description] <String>] [[-Publisher] <String>] [[-Version] <String>]
  [[-Developer] <String>] [[-owner] <String>] [[-notes] <String>] [[-LogoPath] <String>]
@@ -24,22 +27,24 @@ New-IntuneApplication [-ApplicationName] <String> [-SourceFiles] <String[]> [-Ma
 ```
 
 ## DESCRIPTION
-This PowerShell Advanced Function Creates a new Intune Application Deployment,
-this can either generate the .intunewin file and a json file describing the application or
-create the intunewin file and publish it directly to Intune.
+
+\{\{ Fill in the Description \}\}
 
 ## EXAMPLES
 
-### EXAMPLE 1
+### Example 1
+
+```powershell
+PS C:\> {{ Add example code here }}
 ```
-New-IntuneApplication -ApplicationName "7-Zip" -Description "7-Zip is a file archiver with a high compression ratio." -Publisher "7-Zip" -Version "19.00" -Developer "Igor Pavlov" -InstallCommand "msiexec /i 7z1900-x64.msi /qn" -UninstallCommand "msiexec /x 7z1900-x64.msi /qn" -RequirementRuleType "Config" -RequirementRuleConfig "OS: Windows 10" -DetectionRuleType "MSI" -LogoPath "C:\Program Files\7-Zip\7zFM.exe" -AssignmentType "All-Devices" -IntuneWinPath "C:\Temp\7-Zip" -Publish
-Creates a new Intune Application Deployment for 7-Zip, generates the .intunewin file, and publishes it to Intune.
-```
+
+\{\{ Add example description here \}\}
 
 ## PARAMETERS
 
 ### -ApplicationName
-The name of the application to be created.
+
+\{\{ Fill ApplicationName Description \}\}
 
 ```yaml
 Type: String
@@ -54,7 +59,8 @@ Accept wildcard characters: False
 ```
 
 ### -AssignmentGroup
-The group to assign the application to.
+
+\{\{ Fill AssignmentGroup Description \}\}
 
 ```yaml
 Type: String
@@ -69,8 +75,8 @@ Accept wildcard characters: False
 ```
 
 ### -AssignmentType
-The assignment type for the application.
-Either User-Group, Device-Group, All-Users, All-Devices.
+
+\{\{ Fill AssignmentType Description \}\}
 
 ```yaml
 Type: String
@@ -86,8 +92,8 @@ Accept wildcard characters: False
 ```
 
 ### -Description
-The description of the application.
-You can either pass a Markdown formatted file or a string.
+
+\{\{ Fill Description Description \}\}
 
 ```yaml
 Type: String
@@ -96,13 +102,14 @@ Aliases:
 
 Required: False
 Position: 4
-Default value: "# $ApplicationName`nPublisher: $Publisher`nVersion: $Version`nDeveloper: $Developer`n`n$notes"
+Default value: None
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
 
 ### -DetectionRuleConfig
-{{ Fill DetectionRuleConfig Description }}
+
+\{\{ Fill DetectionRuleConfig Description \}\}
 
 ```yaml
 Type: Hashtable
@@ -117,7 +124,8 @@ Accept wildcard characters: False
 ```
 
 ### -Developer
-The developer of the application.
+
+\{\{ Fill Developer Description \}\}
 
 ```yaml
 Type: String
@@ -126,13 +134,14 @@ Aliases:
 
 Required: False
 Position: 7
-Default value: $Env:USERNAME
+Default value: None
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
 
 ### -FilterRule
-The filter rule for the application.
+
+\{\{ Fill FilterRule Description \}\}
 
 ```yaml
 Type: String
@@ -147,7 +156,8 @@ Accept wildcard characters: False
 ```
 
 ### -FilterRuleType
-{{ Fill FilterRuleType Description }}
+
+\{\{ Fill FilterRuleType Description \}\}
 
 ```yaml
 Type: String
@@ -163,7 +173,8 @@ Accept wildcard characters: False
 ```
 
 ### -InstallCommand
-The command to install the application.
+
+\{\{ Fill InstallCommand Description \}\}
 
 ```yaml
 Type: String
@@ -178,7 +189,8 @@ Accept wildcard characters: False
 ```
 
 ### -InstallFor
-{{ Fill InstallFor Description }}
+
+\{\{ Fill InstallFor Description \}\}
 
 ```yaml
 Type: String
@@ -188,15 +200,14 @@ Accepted values: User, System
 
 Required: False
 Position: 11
-Default value: System
+Default value: None
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
 
 ### -IntuneToolsPath
-The path to the IntuneWinAppUtil.exe tool.
-If not specified the function will look for the tool in the current directory.
-If not found the function will download the tool from the internet.
+
+\{\{ Fill IntuneToolsPath Description \}\}
 
 ```yaml
 Type: String
@@ -205,29 +216,14 @@ Aliases:
 
 Required: False
 Position: 22
-Default value: .\IntuneWinAppUtil.exe
-Accept pipeline input: False
-Accept wildcard characters: False
-```
-
-### -isFeatured
-{{ Fill isFeatured Description }}
-
-```yaml
-Type: Boolean
-Parameter Sets: (All)
-Aliases:
-
-Required: False
-Position: 13
-Default value: False
+Default value: None
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
 
 ### -LogoPath
-The path to the image file for the application.
-Needs to be a PNG or JPG with a max resolution of 256x256 pixels.
+
+\{\{ Fill LogoPath Description \}\}
 
 ```yaml
 Type: String
@@ -242,7 +238,8 @@ Accept wildcard characters: False
 ```
 
 ### -MainInstallerFileName
-{{ Fill MainInstallerFileName Description }}
+
+\{\{ Fill MainInstallerFileName Description \}\}
 
 ```yaml
 Type: String
@@ -257,7 +254,8 @@ Accept wildcard characters: False
 ```
 
 ### -NoCleanUp
-Do not clean up the files after publishing.
+
+\{\{ Fill NoCleanUp Description \}\}
 
 ```yaml
 Type: SwitchParameter
@@ -266,13 +264,14 @@ Aliases:
 
 Required: False
 Position: Named
-Default value: False
+Default value: None
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
 
 ### -NoIntuneWin
-Do not generate the .intunewin file.
+
+\{\{ Fill NoIntuneWin Description \}\}
 
 ```yaml
 Type: SwitchParameter
@@ -281,13 +280,14 @@ Aliases:
 
 Required: False
 Position: Named
-Default value: False
+Default value: None
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
 
 ### -NoJson
-Do not generate the JSON file.
+
+\{\{ Fill NoJson Description \}\}
 
 ```yaml
 Type: SwitchParameter
@@ -296,28 +296,14 @@ Aliases:
 
 Required: False
 Position: Named
-Default value: False
-Accept pipeline input: False
-Accept wildcard characters: False
-```
-
-### -notes
-{{ Fill notes Description }}
-
-```yaml
-Type: String
-Parameter Sets: (All)
-Aliases:
-
-Required: False
-Position: 9
 Default value: None
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
 
 ### -OutputFolder
-The folder to save the .intunewin file and JSON config, current directory by default.
+
+\{\{ Fill OutputFolder Description \}\}
 
 ```yaml
 Type: String
@@ -326,48 +312,19 @@ Aliases:
 
 Required: False
 Position: 3
-Default value: $($PWD.Path)
-Accept pipeline input: False
-Accept wildcard characters: False
-```
-
-### -Overwrite
-Overwrite the .intunewin file and JSON if they already exists.
-
-```yaml
-Type: SwitchParameter
-Parameter Sets: (All)
-Aliases:
-
-Required: False
-Position: Named
-Default value: False
-Accept pipeline input: False
-Accept wildcard characters: False
-```
-
-### -owner
-{{ Fill owner Description }}
-
-```yaml
-Type: String
-Parameter Sets: (All)
-Aliases:
-
-Required: False
-Position: 8
 Default value: None
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
 
-### -ProgressAction
-{{ Fill ProgressAction Description }}
+### -Overwrite
+
+\{\{ Fill Overwrite Description \}\}
 
 ```yaml
-Type: ActionPreference
+Type: SwitchParameter
 Parameter Sets: (All)
-Aliases: proga
+Aliases:
 
 Required: False
 Position: Named
@@ -377,7 +334,8 @@ Accept wildcard characters: False
 ```
 
 ### -Publish
-Publish the application directly to Intune.
+
+\{\{ Fill Publish Description \}\}
 
 ```yaml
 Type: SwitchParameter
@@ -386,13 +344,14 @@ Aliases:
 
 Required: False
 Position: Named
-Default value: False
+Default value: None
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
 
 ### -Publisher
-The publisher of the application.
+
+\{\{ Fill Publisher Description \}\}
 
 ```yaml
 Type: String
@@ -401,14 +360,14 @@ Aliases:
 
 Required: False
 Position: 5
-Default value: $Env:USERNAME
+Default value: None
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
 
 ### -RequirementRuleConfig
-The requirement rule Config path for the application.
-A string of parsable requirements.
+
+\{\{ Fill RequirementRuleConfig Description \}\}
 
 ```yaml
 Type: Hashtable
@@ -423,7 +382,8 @@ Accept wildcard characters: False
 ```
 
 ### -RestartBehavior
-{{ Fill RestartBehavior Description }}
+
+\{\{ Fill RestartBehavior Description \}\}
 
 ```yaml
 Type: String
@@ -433,14 +393,14 @@ Accepted values: basedOnReturnCode, allow, suppress, force
 
 Required: False
 Position: 12
-Default value: BasedOnReturnCode
+Default value: None
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
 
 ### -SourceFiles
-This can be a list of files or a directory.
-If you specify a directory, the function will include all files in the directory and subdirectories.
+
+\{\{ Fill SourceFiles Description \}\}
 
 ```yaml
 Type: String[]
@@ -455,7 +415,8 @@ Accept wildcard characters: False
 ```
 
 ### -UninstallCommand
-The command to uninstall the application.
+
+\{\{ Fill UninstallCommand Description \}\}
 
 ```yaml
 Type: String
@@ -470,7 +431,8 @@ Accept wildcard characters: False
 ```
 
 ### -Version
-The version of the application.
+
+\{\{ Fill Version Description \}\}
 
 ```yaml
 Type: String
@@ -479,19 +441,87 @@ Aliases:
 
 Required: False
 Position: 6
-Default value: 1.0
+Default value: None
+Accept pipeline input: False
+Accept wildcard characters: False
+```
+
+### -isFeatured
+
+\{\{ Fill isFeatured Description \}\}
+
+```yaml
+Type: Boolean
+Parameter Sets: (All)
+Aliases:
+
+Required: False
+Position: 13
+Default value: None
+Accept pipeline input: False
+Accept wildcard characters: False
+```
+
+### -notes
+
+\{\{ Fill notes Description \}\}
+
+```yaml
+Type: String
+Parameter Sets: (All)
+Aliases:
+
+Required: False
+Position: 9
+Default value: None
+Accept pipeline input: False
+Accept wildcard characters: False
+```
+
+### -owner
+
+\{\{ Fill owner Description \}\}
+
+```yaml
+Type: String
+Parameter Sets: (All)
+Aliases:
+
+Required: False
+Position: 8
+Default value: None
+Accept pipeline input: False
+Accept wildcard characters: False
+```
+
+### -ProgressAction
+
+\{\{ Fill ProgressAction Description \}\}
+
+```yaml
+Type: ActionPreference
+Parameter Sets: (All)
+Aliases: proga
+
+Required: False
+Position: Named
+Default value: None
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
 
 ### CommonParameters
+
 This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable. For more information, see [about_CommonParameters](http://go.microsoft.com/fwlink/?LinkID=113216).
 
 ## INPUTS
 
+### None
+
 ## OUTPUTS
 
 ### System.Management.Automation.PSObject
+
 ## NOTES
 
 ## RELATED LINKS
