--- a/src/docs_site/powershell_docs/docs/tatux.intune.packaging/docs/New-Win32Installation.mdx
+++ b/src/docs_site/powershell_docs/docs/tatux.intune.packaging/docs/New-Win32Installation.mdx
@@ -1,38 +1,44 @@
 ---
-external help file: tatux.intune.packaging-help.xml
-Module Name: tatux.intune.packaging
-online version:
-schema: 2.0.0
+id: New-Win32Installation
+title: New-Win32Installation
+keywords:
+  - PowerShell
+  - Commands
+  - tatux.intune.packaging
+hide_title: false
+hide_table_of_contents: false
 ---
 
-# New-Win32Installation
-
 ## SYNOPSIS
-{{ Fill in the Synopsis }}
+
+\{\{ Fill in the Synopsis \}\}
 
 ## SYNTAX
 
-```
+```powershell
 New-Win32Installation [-installCommandLine] <String> [-uninstallCommandLine] <String>
  [[-allowAvailableUninstall] <Boolean>] [-ProgressAction <ActionPreference>] [<CommonParameters>]
 ```
 
 ## DESCRIPTION
-{{ Fill in the Description }}
+
+\{\{ Fill in the Description \}\}
 
 ## EXAMPLES
 
 ### Example 1
+
 ```powershell
 PS C:\> {{ Add example code here }}
 ```
 
-{{ Add example description here }}
+\{\{ Add example description here \}\}
 
 ## PARAMETERS
 
 ### -allowAvailableUninstall
-{{ Fill allowAvailableUninstall Description }}
+
+\{\{ Fill allowAvailableUninstall Description \}\}
 
 ```yaml
 Type: Boolean
@@ -47,7 +53,8 @@ Accept wildcard characters: False
 ```
 
 ### -installCommandLine
-{{ Fill installCommandLine Description }}
+
+\{\{ Fill installCommandLine Description \}\}
 
 ```yaml
 Type: String
@@ -61,23 +68,9 @@ Accept pipeline input: False
 Accept wildcard characters: False
 ```
 
-### -ProgressAction
-{{ Fill ProgressAction Description }}
-
-```yaml
-Type: ActionPreference
-Parameter Sets: (All)
-Aliases: proga
-
-Required: False
-Position: Named
-Default value: None
-Accept pipeline input: False
-Accept wildcard characters: False
-```
-
 ### -uninstallCommandLine
-{{ Fill uninstallCommandLine Description }}
+
+\{\{ Fill uninstallCommandLine Description \}\}
 
 ```yaml
 Type: String
@@ -91,7 +84,24 @@ Accept pipeline input: False
 Accept wildcard characters: False
 ```
 
+### -ProgressAction
+
+\{\{ Fill ProgressAction Description \}\}
+
+```yaml
+Type: ActionPreference
+Parameter Sets: (All)
+Aliases: proga
+
+Required: False
+Position: Named
+Default value: None
+Accept pipeline input: False
+Accept wildcard characters: False
+```
+
 ### CommonParameters
+
 This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable. For more information, see [about_CommonParameters](http://go.microsoft.com/fwlink/?LinkID=113216).
 
 ## INPUTS
