--- a/src/docs_site/powershell_docs/docs/tatux.intune.packaging/docs/New-Win32ReturnCode.mdx
+++ b/src/docs_site/powershell_docs/docs/tatux.intune.packaging/docs/New-Win32ReturnCode.mdx
@@ -1,53 +1,44 @@
 ---
-external help file: tatux.intune.packaging-help.xml
-Module Name: tatux.intune.packaging
-online version:
-schema: 2.0.0
+id: New-Win32ReturnCode
+title: New-Win32ReturnCode
+keywords:
+  - PowerShell
+  - Commands
+  - tatux.intune.packaging
+hide_title: false
+hide_table_of_contents: false
 ---
 
-# New-Win32Installation
-
 ## SYNOPSIS
-{{ Fill in the Synopsis }}
+
+\{\{ Fill in the Synopsis \}\}
 
 ## SYNTAX
 
-```
-New-Win32Installation [-installCommandLine] <String> [-uninstallCommandLine] <String>
- [[-allowAvailableUninstall] <Boolean>] [-ProgressAction <ActionPreference>] [<CommonParameters>]
+```powershell
+New-Win32ReturnCode [-ReturnCode] <String> [-ReturnMessage] <String> [-ProgressAction <ActionPreference>]
+ [<CommonParameters>]
 ```
 
 ## DESCRIPTION
-{{ Fill in the Description }}
+
+\{\{ Fill in the Description \}\}
 
 ## EXAMPLES
 
 ### Example 1
+
 ```powershell
 PS C:\> {{ Add example code here }}
 ```
 
-{{ Add example description here }}
+\{\{ Add example description here \}\}
 
 ## PARAMETERS
 
-### -allowAvailableUninstall
-{{ Fill allowAvailableUninstall Description }}
+### -ReturnCode
 
-```yaml
-Type: Boolean
-Parameter Sets: (All)
-Aliases:
-
-Required: False
-Position: 2
-Default value: None
-Accept pipeline input: False
-Accept wildcard characters: False
-```
-
-### -installCommandLine
-{{ Fill installCommandLine Description }}
+\{\{ Fill ReturnCode Description \}\}
 
 ```yaml
 Type: String
@@ -61,8 +52,26 @@ Accept pipeline input: False
 Accept wildcard characters: False
 ```
 
+### -ReturnMessage
+
+\{\{ Fill ReturnMessage Description \}\}
+
+```yaml
+Type: String
+Parameter Sets: (All)
+Aliases:
+Accepted values: success, failed, softReboot, hardReboot, retry
+
+Required: True
+Position: 1
+Default value: None
+Accept pipeline input: False
+Accept wildcard characters: False
+```
+
 ### -ProgressAction
-{{ Fill ProgressAction Description }}
+
+\{\{ Fill ProgressAction Description \}\}
 
 ```yaml
 Type: ActionPreference
@@ -76,22 +85,8 @@ Accept pipeline input: False
 Accept wildcard characters: False
 ```
 
-### -uninstallCommandLine
-{{ Fill uninstallCommandLine Description }}
-
-```yaml
-Type: String
-Parameter Sets: (All)
-Aliases:
-
-Required: True
-Position: 1
-Default value: None
-Accept pipeline input: False
-Accept wildcard characters: False
-```
-
 ### CommonParameters
+
 This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable. For more information, see [about_CommonParameters](http://go.microsoft.com/fwlink/?LinkID=113216).
 
 ## INPUTS
