--- a/src/docs_site/powershell_docs/docs/tatux.intune.packaging/docs/New-Win32Rule.mdx
+++ b/src/docs_site/powershell_docs/docs/tatux.intune.packaging/docs/New-Win32Rule.mdx
@@ -1,60 +1,70 @@
 ---
-external help file: tatux.intune.packaging-help.xml
-Module Name: tatux.intune.packaging
-online version:
-schema: 2.0.0
+id: New-Win32Rule
+title: New-Win32Rule
+keywords:
+  - PowerShell
+  - Commands
+  - tatux.intune.packaging
+hide_title: false
+hide_table_of_contents: false
 ---
 
-# New-Win32Rule
-
 ## SYNOPSIS
-{{ Fill in the Synopsis }}
+
+\{\{ Fill in the Synopsis \}\}
 
 ## SYNTAX
 
 ### registry
-```
+
+```powershell
 New-Win32Rule [-RuleParentType <String>] [-RuleType <String>] -Path <String> [-Check32BitOn64System <Boolean>]
  [-Operator <String>] [-ComparisonValue <String>] -ValueName <String> -RegistryOperationType <String>
  [-ProgressAction <ActionPreference>] [<CommonParameters>]
 ```
 
 ### file
-```
+
+```powershell
 New-Win32Rule [-RuleParentType <String>] [-RuleType <String>] -Path <String> -FileOrFolderName <String>
  [-Check32BitOn64System <Boolean>] [-FileOperationType <String>] [-Operator <String>]
  [-ComparisonValue <String>] [-ProgressAction <ActionPreference>] [<CommonParameters>]
 ```
 
 ### msi
-```
+
+```powershell
 New-Win32Rule [-RuleParentType <String>] [-RuleType <String>] -MSIPath <String> [-ProductCode <String>]
  [-ProductVersionOperator <String>] [-ProductVersion <String>] [-AutoDetect <Boolean>] [-Operator <String>]
  [-ProgressAction <ActionPreference>] [<CommonParameters>]
 ```
 
 ### script
-```
+
+```powershell
 New-Win32Rule [-RuleParentType <String>] [-RuleType <String>] [-Operator <String>] -DisplayName <String>
  [-EnforceSignatureCheck <Boolean>] [-RunAs32Bit <Boolean>] [-runAsAccount <String>] -ScriptPath <String>
  [-ProgressAction <ActionPreference>] [<CommonParameters>]
 ```
 
 ## DESCRIPTION
-{{ Fill in the Description }}
+
+\{\{ Fill in the Description \}\}
 
 ## EXAMPLES
 
 ### Example 1
+
 ```powershell
 PS C:\> {{ Add example code here }}
 ```
 
-{{ Add example description here }}
+\{\{ Add example description here \}\}
 
 ## PARAMETERS
 
 ### -AutoDetect
+
 Detect the MSI properties automatically.
 
 ```yaml
@@ -70,6 +80,7 @@ Accept wildcard characters: False
 ```
 
 ### -Check32BitOn64System
+
 Expand 32bit variables on a 64bit system?
 
 ```yaml
@@ -85,6 +96,7 @@ Accept wildcard characters: False
 ```
 
 ### -ComparisonValue
+
 The value to compare against.
 
 ```yaml
@@ -100,6 +112,7 @@ Accept wildcard characters: False
 ```
 
 ### -DisplayName
+
 The script display name.
 Default will be file name.
 
@@ -116,6 +129,7 @@ Accept wildcard characters: False
 ```
 
 ### -EnforceSignatureCheck
+
 The enforces a script signature check.
 
 ```yaml
@@ -131,6 +145,7 @@ Accept wildcard characters: False
 ```
 
 ### -FileOperationType
+
 The path or file operation type.
 If exists is selected then the operator and comparison value are not required.
 
@@ -148,6 +163,7 @@ Accept wildcard characters: False
 ```
 
 ### -FileOrFolderName
+
 The file or folder name.
 
 ```yaml
@@ -163,6 +179,7 @@ Accept wildcard characters: False
 ```
 
 ### -MSIPath
+
 The path to the MSI file.
 
 ```yaml
@@ -178,6 +195,7 @@ Accept wildcard characters: False
 ```
 
 ### -Operator
+
 The operator for comparison.
 
 ```yaml
@@ -194,6 +212,7 @@ Accept wildcard characters: False
 ```
 
 ### -Path
+
 The registry key path.
 
 ```yaml
@@ -209,6 +228,7 @@ Accept wildcard characters: False
 ```
 
 ### -ProductCode
+
 The product code to detect.
 
 ```yaml
@@ -224,6 +244,7 @@ Accept wildcard characters: False
 ```
 
 ### -ProductVersion
+
 The value to compare against.
 
 ```yaml
@@ -239,6 +260,7 @@ Accept wildcard characters: False
 ```
 
 ### -ProductVersionOperator
+
 The MSI operation type.
 If exists is selected then the operator and comparison value are not required.
 
@@ -255,22 +277,8 @@ Accept pipeline input: False
 Accept wildcard characters: False
 ```
 
-### -ProgressAction
-{{ Fill ProgressAction Description }}
-
-```yaml
-Type: ActionPreference
-Parameter Sets: (All)
-Aliases: proga
-
-Required: False
-Position: Named
-Default value: None
-Accept pipeline input: False
-Accept wildcard characters: False
-```
-
 ### -RegistryOperationType
+
 The registry operation type.
 If exists is selected then the operator and comparison value are not required.
 
@@ -288,6 +296,7 @@ Accept wildcard characters: False
 ```
 
 ### -RuleParentType
+
 The type of rule to create.
 
 ```yaml
@@ -304,7 +313,8 @@ Accept wildcard characters: False
 ```
 
 ### -RuleType
-{{ Fill RuleType Description }}
+
+\{\{ Fill RuleType Description \}\}
 
 ```yaml
 Type: String
@@ -320,6 +330,7 @@ Accept wildcard characters: False
 ```
 
 ### -RunAs32Bit
+
 Run script as 32bit on 64bit systems.
 
 ```yaml
@@ -335,23 +346,8 @@ Accept pipeline input: False
 Accept wildcard characters: False
 ```
 
-### -runAsAccount
-The account type to run the requirements script as.
-
-```yaml
-Type: String
-Parameter Sets: script
-Aliases:
-Accepted values: system, user
-
-Required: False
-Position: Named
-Default value: None
-Accept pipeline input: False
-Accept wildcard characters: False
-```
-
 ### -ScriptPath
+
 The script path.
 
 ```yaml
@@ -367,6 +363,7 @@ Accept wildcard characters: False
 ```
 
 ### -ValueName
+
 The registry value name to detect.
 
 ```yaml
@@ -381,7 +378,41 @@ Accept pipeline input: False
 Accept wildcard characters: False
 ```
 
+### -runAsAccount
+
+The account type to run the requirements script as.
+
+```yaml
+Type: String
+Parameter Sets: script
+Aliases:
+Accepted values: system, user
+
+Required: False
+Position: Named
+Default value: None
+Accept pipeline input: False
+Accept wildcard characters: False
+```
+
+### -ProgressAction
+
+\{\{ Fill ProgressAction Description \}\}
+
+```yaml
+Type: ActionPreference
+Parameter Sets: (All)
+Aliases: proga
+
+Required: False
+Position: Named
+Default value: None
+Accept pipeline input: False
+Accept wildcard characters: False
+```
+
 ### CommonParameters
+
 This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable. For more information, see [about_CommonParameters](http://go.microsoft.com/fwlink/?LinkID=113216).
 
 ## INPUTS
