--- a/src/docs_site/powershell_docs/docs/tatux.intune.packaging/docs/Set-ModuleConfig.mdx
+++ b/src/docs_site/powershell_docs/docs/tatux.intune.packaging/docs/Set-ModuleConfig.mdx
@@ -1,41 +1,63 @@
 ---
-external help file: tatux.intune.packaging-help.xml
-Module Name: tatux.intune.packaging
-online version:
-schema: 2.0.0
+id: Set-ModuleConfig
+title: Set-ModuleConfig
+keywords:
+  - PowerShell
+  - Commands
+  - tatux.intune.packaging
+hide_title: false
+hide_table_of_contents: false
 ---
 
-# New-Win32Installation
-
 ## SYNOPSIS
-{{ Fill in the Synopsis }}
+
+\{\{ Fill in the Synopsis \}\}
 
 ## SYNTAX
 
-```
-New-Win32Installation [-installCommandLine] <String> [-uninstallCommandLine] <String>
- [[-allowAvailableUninstall] <Boolean>] [-ProgressAction <ActionPreference>] [<CommonParameters>]
+```powershell
+Set-ModuleConfig [[-UpdateWarning] <String>] [[-ModuleName] <String>] [[-ModulePath] <String>]
+ [-ProgressAction <ActionPreference>] [<CommonParameters>]
 ```
 
 ## DESCRIPTION
-{{ Fill in the Description }}
+
+\{\{ Fill in the Description \}\}
 
 ## EXAMPLES
 
 ### Example 1
+
 ```powershell
 PS C:\> {{ Add example code here }}
 ```
 
-{{ Add example description here }}
+\{\{ Add example description here \}\}
 
 ## PARAMETERS
 
-### -allowAvailableUninstall
-{{ Fill allowAvailableUninstall Description }}
+### -ModuleName
+
+\{\{ Fill ModuleName Description \}\}
 
 ```yaml
-Type: Boolean
+Type: String
+Parameter Sets: (All)
+Aliases:
+
+Required: False
+Position: 1
+Default value: None
+Accept pipeline input: False
+Accept wildcard characters: False
+```
+
+### -ModulePath
+
+\{\{ Fill ModulePath Description \}\}
+
+```yaml
+Type: String
 Parameter Sets: (All)
 Aliases:
 
@@ -46,15 +68,17 @@ Accept pipeline input: False
 Accept wildcard characters: False
 ```
 
-### -installCommandLine
-{{ Fill installCommandLine Description }}
+### -UpdateWarning
+
+\{\{ Fill UpdateWarning Description \}\}
 
 ```yaml
 Type: String
 Parameter Sets: (All)
 Aliases:
+Accepted values: True, False
 
-Required: True
+Required: False
 Position: 0
 Default value: None
 Accept pipeline input: False
@@ -62,7 +86,8 @@ Accept wildcard characters: False
 ```
 
 ### -ProgressAction
-{{ Fill ProgressAction Description }}
+
+\{\{ Fill ProgressAction Description \}\}
 
 ```yaml
 Type: ActionPreference
@@ -76,22 +101,8 @@ Accept pipeline input: False
 Accept wildcard characters: False
 ```
 
-### -uninstallCommandLine
-{{ Fill uninstallCommandLine Description }}
-
-```yaml
-Type: String
-Parameter Sets: (All)
-Aliases:
-
-Required: True
-Position: 1
-Default value: None
-Accept pipeline input: False
-Accept wildcard characters: False
-```
-
 ### CommonParameters
+
 This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable. For more information, see [about_CommonParameters](http://go.microsoft.com/fwlink/?LinkID=113216).
 
 ## INPUTS
@@ -100,7 +111,7 @@ This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable
 
 ## OUTPUTS
 
-### System.Collections.Hashtable
+### System.Object
 
 ## NOTES
 
