--- a/src/docs_site/powershell_docs/docs/tatux.intune.packaging/docs/New-Win32ApplicationInfo.mdx
+++ b/src/docs_site/powershell_docs/docs/tatux.intune.packaging/docs/New-Win32ApplicationInfo.mdx
@@ -1,18 +1,21 @@
 ---
-external help file: tatux.intune.packaging-help.xml
-Module Name: tatux.intune.packaging
-online version:
-schema: 2.0.0
+id: New-Win32ApplicationInfo
+title: New-Win32ApplicationInfo
+keywords:
+  - PowerShell
+  - Commands
+  - tatux.intune.packaging
+hide_title: false
+hide_table_of_contents: false
 ---
 
-# New-Win32ApplicationInfo
-
 ## SYNOPSIS
-{{ Fill in the Synopsis }}
+
+\{\{ Fill in the Synopsis \}\}
 
 ## SYNTAX
 
-```
+```powershell
 New-Win32ApplicationInfo [-displayName] <String> [-description] <String> [-publisher] <String>
  [[-notes] <String>] [[-owner] <String>] [[-developer] <String>] [[-version] <String>]
  [[-isFeatured] <Boolean>] [[-privacyInformationUrl] <String>] [[-informationUrl] <String>]
@@ -20,21 +23,24 @@ New-Win32ApplicationInfo [-displayName] <String> [-description] <String> [-publi
 ```
 
 ## DESCRIPTION
-{{ Fill in the Description }}
+
+\{\{ Fill in the Description \}\}
 
 ## EXAMPLES
 
 ### Example 1
+
 ```powershell
 PS C:\> {{ Add example code here }}
 ```
 
-{{ Add example description here }}
+\{\{ Add example description here \}\}
 
 ## PARAMETERS
 
 ### -description
-{{ Fill description Description }}
+
+\{\{ Fill description Description \}\}
 
 ```yaml
 Type: String
@@ -49,7 +55,8 @@ Accept wildcard characters: False
 ```
 
 ### -developer
-{{ Fill developer Description }}
+
+\{\{ Fill developer Description \}\}
 
 ```yaml
 Type: String
@@ -64,7 +71,8 @@ Accept wildcard characters: False
 ```
 
 ### -displayName
-{{ Fill displayName Description }}
+
+\{\{ Fill displayName Description \}\}
 
 ```yaml
 Type: String
@@ -79,7 +87,8 @@ Accept wildcard characters: False
 ```
 
 ### -informationUrl
-{{ Fill informationUrl Description }}
+
+\{\{ Fill informationUrl Description \}\}
 
 ```yaml
 Type: String
@@ -94,7 +103,8 @@ Accept wildcard characters: False
 ```
 
 ### -isFeatured
-{{ Fill isFeatured Description }}
+
+\{\{ Fill isFeatured Description \}\}
 
 ```yaml
 Type: Boolean
@@ -109,7 +119,8 @@ Accept wildcard characters: False
 ```
 
 ### -notes
-{{ Fill notes Description }}
+
+\{\{ Fill notes Description \}\}
 
 ```yaml
 Type: String
@@ -124,7 +135,8 @@ Accept wildcard characters: False
 ```
 
 ### -owner
-{{ Fill owner Description }}
+
+\{\{ Fill owner Description \}\}
 
 ```yaml
 Type: String
@@ -139,7 +151,8 @@ Accept wildcard characters: False
 ```
 
 ### -privacyInformationUrl
-{{ Fill privacyInformationUrl Description }}
+
+\{\{ Fill privacyInformationUrl Description \}\}
 
 ```yaml
 Type: String
@@ -153,23 +166,9 @@ Accept pipeline input: False
 Accept wildcard characters: False
 ```
 
-### -ProgressAction
-{{ Fill ProgressAction Description }}
-
-```yaml
-Type: ActionPreference
-Parameter Sets: (All)
-Aliases: proga
-
-Required: False
-Position: Named
-Default value: None
-Accept pipeline input: False
-Accept wildcard characters: False
-```
-
 ### -publisher
-{{ Fill publisher Description }}
+
+\{\{ Fill publisher Description \}\}
 
 ```yaml
 Type: String
@@ -184,7 +183,8 @@ Accept wildcard characters: False
 ```
 
 ### -version
-{{ Fill version Description }}
+
+\{\{ Fill version Description \}\}
 
 ```yaml
 Type: String
@@ -198,7 +198,24 @@ Accept pipeline input: False
 Accept wildcard characters: False
 ```
 
+### -ProgressAction
+
+\{\{ Fill ProgressAction Description \}\}
+
+```yaml
+Type: ActionPreference
+Parameter Sets: (All)
+Aliases: proga
+
+Required: False
+Position: Named
+Default value: None
+Accept pipeline input: False
+Accept wildcard characters: False
+```
+
 ### CommonParameters
+
 This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable. For more information, see [about_CommonParameters](http://go.microsoft.com/fwlink/?LinkID=113216).
 
 ## INPUTS
@@ -208,6 +225,7 @@ This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable
 ## OUTPUTS
 
 ### System.Object
+
 ## NOTES
 
 ## RELATED LINKS
