--- a/src/docs_site/powershell_docs/docs/tatux.intune.packaging/docs/New-Win32InstallExperience.mdx
+++ b/src/docs_site/powershell_docs/docs/tatux.intune.packaging/docs/New-Win32InstallExperience.mdx
@@ -1,43 +1,83 @@
 ---
-external help file: tatux.intune.packaging-help.xml
-Module Name: tatux.intune.packaging
-online version:
-schema: 2.0.0
+id: New-Win32InstallExperience
+title: New-Win32InstallExperience
+keywords:
+  - PowerShell
+  - Commands
+  - tatux.intune.packaging
+hide_title: false
+hide_table_of_contents: false
 ---
 
-# New-Win32Installation
-
 ## SYNOPSIS
-{{ Fill in the Synopsis }}
+
+\{\{ Fill in the Synopsis \}\}
 
 ## SYNTAX
 
-```
-New-Win32Installation [-installCommandLine] <String> [-uninstallCommandLine] <String>
- [[-allowAvailableUninstall] <Boolean>] [-ProgressAction <ActionPreference>] [<CommonParameters>]
+```powershell
+New-Win32InstallExperience [[-maxRunTimeInMinutes] <String>] [[-restartBehavior] <String>]
+ [[-runAsAccount] <String>] [-ProgressAction <ActionPreference>] [<CommonParameters>]
 ```
 
 ## DESCRIPTION
-{{ Fill in the Description }}
+
+\{\{ Fill in the Description \}\}
 
 ## EXAMPLES
 
 ### Example 1
+
 ```powershell
 PS C:\> {{ Add example code here }}
 ```
 
-{{ Add example description here }}
+\{\{ Add example description here \}\}
 
 ## PARAMETERS
 
-### -allowAvailableUninstall
-{{ Fill allowAvailableUninstall Description }}
+### -maxRunTimeInMinutes
+
+\{\{ Fill maxRunTimeInMinutes Description \}\}
 
 ```yaml
-Type: Boolean
+Type: String
+Parameter Sets: (All)
+Aliases: InstallTimeInMinutes
+
+Required: False
+Position: 0
+Default value: None
+Accept pipeline input: False
+Accept wildcard characters: False
+```
+
+### -restartBehavior
+
+\{\{ Fill restartBehavior Description \}\}
+
+```yaml
+Type: String
 Parameter Sets: (All)
 Aliases:
+Accepted values: basedOnReturnCode, never, always, prompt, suppress
+
+Required: False
+Position: 1
+Default value: None
+Accept pipeline input: False
+Accept wildcard characters: False
+```
+
+### -runAsAccount
+
+\{\{ Fill runAsAccount Description \}\}
+
+```yaml
+Type: String
+Parameter Sets: (All)
+Aliases: InstallFor
+Accepted values: system, sser
 
 Required: False
 Position: 2
@@ -46,23 +86,9 @@ Accept pipeline input: False
 Accept wildcard characters: False
 ```
 
-### -installCommandLine
-{{ Fill installCommandLine Description }}
-
-```yaml
-Type: String
-Parameter Sets: (All)
-Aliases:
-
-Required: True
-Position: 0
-Default value: None
-Accept pipeline input: False
-Accept wildcard characters: False
-```
-
 ### -ProgressAction
-{{ Fill ProgressAction Description }}
+
+\{\{ Fill ProgressAction Description \}\}
 
 ```yaml
 Type: ActionPreference
@@ -76,22 +102,8 @@ Accept pipeline input: False
 Accept wildcard characters: False
 ```
 
-### -uninstallCommandLine
-{{ Fill uninstallCommandLine Description }}
-
-```yaml
-Type: String
-Parameter Sets: (All)
-Aliases:
-
-Required: True
-Position: 1
-Default value: None
-Accept pipeline input: False
-Accept wildcard characters: False
-```
-
 ### CommonParameters
+
 This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable. For more information, see [about_CommonParameters](http://go.microsoft.com/fwlink/?LinkID=113216).
 
 ## INPUTS
