--- a/src/docs_site/powershell_docs/docs/tatux.intune.packaging/docs/Publish-IntuneAppPackage.mdx
+++ b/src/docs_site/powershell_docs/docs/tatux.intune.packaging/docs/Publish-IntuneAppPackage.mdx
@@ -1,53 +1,60 @@
 ---
-external help file: tatux.intune.packaging-help.xml
-Module Name: tatux.intune.packaging
-online version:
-schema: 2.0.0
+id: Publish-IntuneAppPackage
+title: Publish-IntuneAppPackage
+keywords:
+  - PowerShell
+  - Commands
+  - tatux.intune.packaging
+hide_title: false
+hide_table_of_contents: false
 ---
 
-# New-Win32Installation
-
 ## SYNOPSIS
-{{ Fill in the Synopsis }}
+
+\{\{ Fill in the Synopsis \}\}
 
 ## SYNTAX
 
-```
-New-Win32Installation [-installCommandLine] <String> [-uninstallCommandLine] <String>
- [[-allowAvailableUninstall] <Boolean>] [-ProgressAction <ActionPreference>] [<CommonParameters>]
+```powershell
+Publish-IntuneAppPackage [-IntuneAppJSONPath] <String> [-IntuneWinPath] <String> [-Force] [-NoTenantDetails]
+ [-ProgressAction <ActionPreference>] [<CommonParameters>]
 ```
 
 ## DESCRIPTION
-{{ Fill in the Description }}
+
+\{\{ Fill in the Description \}\}
 
 ## EXAMPLES
 
 ### Example 1
+
 ```powershell
 PS C:\> {{ Add example code here }}
 ```
 
-{{ Add example description here }}
+\{\{ Add example description here \}\}
 
 ## PARAMETERS
 
-### -allowAvailableUninstall
-{{ Fill allowAvailableUninstall Description }}
+### -Force
+
+\{\{ Fill Force Description \}\}
 
 ```yaml
-Type: Boolean
+Type: SwitchParameter
 Parameter Sets: (All)
 Aliases:
 
 Required: False
-Position: 2
+Position: Named
 Default value: None
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
 
-### -installCommandLine
-{{ Fill installCommandLine Description }}
+### -IntuneAppJSONPath
+
+\{\{ Fill IntuneAppJSONPath Description \}\}
 
 ```yaml
 Type: String
@@ -61,23 +68,9 @@ Accept pipeline input: False
 Accept wildcard characters: False
 ```
 
-### -ProgressAction
-{{ Fill ProgressAction Description }}
+### -IntuneWinPath
 
-```yaml
-Type: ActionPreference
-Parameter Sets: (All)
-Aliases: proga
-
-Required: False
-Position: Named
-Default value: None
-Accept pipeline input: False
-Accept wildcard characters: False
-```
-
-### -uninstallCommandLine
-{{ Fill uninstallCommandLine Description }}
+\{\{ Fill IntuneWinPath Description \}\}
 
 ```yaml
 Type: String
@@ -91,7 +84,40 @@ Accept pipeline input: False
 Accept wildcard characters: False
 ```
 
+### -NoTenantDetails
+
+\{\{ Fill NoTenantDetails Description \}\}
+
+```yaml
+Type: SwitchParameter
+Parameter Sets: (All)
+Aliases:
+
+Required: False
+Position: Named
+Default value: None
+Accept pipeline input: False
+Accept wildcard characters: False
+```
+
+### -ProgressAction
+
+\{\{ Fill ProgressAction Description \}\}
+
+```yaml
+Type: ActionPreference
+Parameter Sets: (All)
+Aliases: proga
+
+Required: False
+Position: Named
+Default value: None
+Accept pipeline input: False
+Accept wildcard characters: False
+```
+
 ### CommonParameters
+
 This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable. For more information, see [about_CommonParameters](http://go.microsoft.com/fwlink/?LinkID=113216).
 
 ## INPUTS
@@ -100,7 +126,7 @@ This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable
 
 ## OUTPUTS
 
-### System.Collections.Hashtable
+### System.Management.Automation.PSObject
 
 ## NOTES
 
