--- a/src/docs_site/powershell_docs/docs/tatux.intune.packaging/docs/Set-ModuleConfig.mdx
+++ b/src/docs_site/powershell_docs/docs/tatux.intune.packaging/docs/Set-ModuleConfig.mdx
@@ -16,8 +16,8 @@ hide_table_of_contents: false
 ## SYNTAX
 
 ```powershell
-Set-ModuleConfig [[-UpdateWarning] <String>] [[-ModuleName] <String>] [[-ModulePath] <String>]
- [-ProgressAction <ActionPreference>] [<CommonParameters>]
+Set-ModuleConfig [[-UpdateWarning] <String>] [[-ModuleName] <String>] [[-ModuleConfigPathFile] <String>]
+ [[-ModulePath] <String>] [-ProgressAction <ActionPreference>] [<CommonParameters>]
 ```
 
 ## DESCRIPTION
@@ -28,9 +28,25 @@ Set-ModuleConfig [[-UpdateWarning] <String>] [[-ModuleName] <String>] [[-ModuleP
 
 ## PARAMETERS
 
+### -ModuleConfigPathFile
+
+Path of the module config.
+
+```yaml
+Type: String
+Parameter Sets: (All)
+Aliases:
+
+Required: False
+Position: 2
+Default value: None
+Accept pipeline input: False
+Accept wildcard characters: False
+```
+
 ### -ModuleName
 
-\{\{ Fill ModuleName Description \}\}
+Name of the module the configurationis being set for.
 
 ```yaml
 Type: String
@@ -46,7 +62,7 @@ Accept wildcard characters: False
 
 ### -ModulePath
 
-\{\{ Fill ModulePath Description \}\}
+Path of the module.
 
 ```yaml
 Type: String
@@ -54,7 +70,7 @@ Parameter Sets: (All)
 Aliases:
 
 Required: False
-Position: 2
+Position: 3
 Default value: None
 Accept pipeline input: False
 Accept wildcard characters: False
@@ -62,7 +78,7 @@ Accept wildcard characters: False
 
 ### -UpdateWarning
 
-\{\{ Fill UpdateWarning Description \}\}
+Determines if the update message is displayed when the module is loaded.
 
 ```yaml
 Type: String
@@ -109,4 +125,4 @@ This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable
 
 ## RELATED LINKS
 
-[https://pwsh.dev.tatux.co.uk/tatux.intune.packaging/docs/Set-ModuleConfig/](https://pwsh.dev.tatux.co.uk/tatux.intune.packaging/docs/Set-ModuleConfig/)
+[https://pwsh.dev.tatux.co.uk/tatux.intune.packaging/docs/Set-ModuleConfig.html](https://pwsh.dev.tatux.co.uk/tatux.intune.packaging/docs/Set-ModuleConfig.html)
